--- a/client/index.html
+++ b/client/index.html
@@ -14,6 +14,8 @@
   <script src="js/playerabc.js"></script>
   <script src="js/saltar.js"></script>
   <script src="js/supersalto.js"></script>
+  <script src="js/ascensorpok.js"></script>
+  <script src="indexpoke.js"></script>
       <style>
       #scene{display:none}
       #btncolor{
@@ -122,8 +124,11 @@ input {
 <input type="checkbox" name="" id="scenetrue">
   </main>
   <a-scene id="scene" background="" debug="" physics="debug: true" class="fullscreen" canvas="" inspector="" keyboard-shortcuts="" screenshot="" vr-mode-ui="" auto-enter-vr="">
-   <a-light type="point" angle="60" intensity="0.3" position="0 -10000 0"></a-light>  
+    <a-sky radius="10000" material="src: materials/spaciosss.png;"></a-sky>
+<a-entity id="sol" position="-2500 7000 -4000" rotation="105 30 0" obj-model="obj: url(objets/asteroids2.obj); mtl: url(objets/asteroids2.mtl)" scale="800 800 800">
+<a-light type="point" angle="60" intensity="0.3" position="0 -10000 0"></a-light>  
 <a-light type="ambient" intensity="1.2" position="0 0 0"></a-light>  
+</a-entity>
 <a-entity id="player" position="-10 4 13" rotation="0 0 0" sound="src:#bg_music; autoplay:true; loop:true; volume:0.05" camera="" player="health: 200" userheight="3" universal-controls="" kinematic-body="" velocity="1000 1000 1000" gamepad-controls="" keyboard-controls="" touch-controls="" hmd-controls="" mouse-controls="">
 <a-entity sound="src:#bg_music"></a-entity>
         <a-cursor position="0 -0.8 0" rotation="-90 0 0" scale="2 2 2" material="color:red;opacity:0"></a-cursor>
